[workspace]
members=["crates/goraa"]
resolver="3"

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
description = "Obfuscating compiler"

[workspace.dependencies]
portal-pc-asm-common = {version = "0.1.1",git = "https://github.com/portal-co/asm-common.git"}
portal-solutions-asm-x86-64 = {version = "0.1.0",git = "https://github.com/portal-co/asm-arch.git"}
